🎓 update documentation
