# products/handlers/products.go
@@ -1,47 +1,16 @@
-// Package classification Product API
-//
-// Documentation for Product API
-//
-// Schemes: http
-// BasePath: /
-// Version: 1.0.0
-//
-// Consumes:
-// 	- application/json
-//
-// Produces:
-// 	- application/json
-// swagger:meta
 package handlers
 
 import (
-	"context"
-	"fmt"
 	"log"
 	"net/http"
+	"strconv"
 
-	"github.com/rjNemo/go-micro/products/models"
+	"github.com/gorilla/mux"
 )
 
 // Products is a handler for Products API service
 type Products struct {
 	logger *log.Logger
-}
-
-// list of products in the response. For go-swagger
-// swagger:response productsResponse
-type productsResponse struct {
-	// All products in the datastore
-	// in: body
-	Body []models.Product
-}
-
-// product in the response. For go-swagger
-// swagger:response productResponse
-type productResponse struct {
-	// One product in the datastore
-	// in: body
-	Body models.Product
 }
 
 // New creates a Products handler
@@ -52,33 +21,20 @@ func New(logger *log.Logger) *Products {
 // KeyProduct is a key used to pass validated product to handler
 type KeyProduct struct{}
 
-// ProductValidationMiddleware validates the data passed by the user
-func (p *Products) ProductValidationMiddleware(next http.Handler) http.Handler {
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		// create a new product
-		newProd := &models.Product{}
-		// deserialize JSON to product
-		err := newProd.FromJSON(r.Body)
-		if err != nil {
-			p.logger.Printf("Error deserializing %v", err)
-			errMsg := fmt.Sprintf("Unable to decode data: %s\n", err)
-			http.Error(w, errMsg, http.StatusBadRequest)
-			return
-		}
-		// validate the product
-		err = newProd.Validate()
-		if err != nil {
-			p.logger.Printf("Error deserializing %v", err)
-			errMsg := fmt.Sprintf("Validation error: %s\n", err)
-			http.Error(w, errMsg, http.StatusBadRequest)
-			return
-		}
+// getProductID returns the product ID from the URL
+// Panics if cannot convert the id into an integer
+// this should never happen as the router ensures that
+// this is a valid number
+func getProductID(r *http.Request) int {
+	// parse the product id from the url
+	vars := mux.Vars(r)
 
-		// add product to the context
-		ctx := context.WithValue(r.Context(), KeyProduct{}, newProd)
-		req := r.WithContext(ctx)
+	// convert the id into an integer and return
+	id, err := strconv.Atoi(vars["id"])
+	if err != nil {
+		// should never happen
+		panic(err)
+	}
 
-		// call the next handler
-		next.ServeHTTP(w, req)
-	})
+	return id
 }
